--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
   }
 
   .checkbox {
-    @apply rounded border-gray-300 bg-gray-50 text-amber-300 focus:ring-2 focus:ring-blue-400 dark:border-gray-600 dark:bg-gray-700 dark:text-blue-600 dark:ring-offset-gray-800 dark:focus:ring-cyan-600;
+    @apply rounded border-gray-300 bg-gray-50 text-amber-300 focus:ring-2 focus:ring-amber-400 dark:border-gray-600 dark:bg-gray-700 dark:text-blue-600 dark:ring-offset-gray-800 dark:focus:ring-cyan-600;
   }
 }
 
